assets/css/scrollbars.css
/* SPDX-FileCopyrightText: Copyright (c) 2022-2026 trobonox <hello@trobo.dev>

SPDX-License-Identifier: GPL-3.0-or-later

Kanri is an offline Kanban board app made using Tauri and Nuxt.
Copyright (C) 2022-2026 trobonox <hello@trobo.dev>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

.custom-scrollbar-hidden::-webkit-scrollbar {
  width: 0;
  height: 0;
}

.custom-scrollbar::-webkit-scrollbar {
  width: 12px;
  height: 16px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: var(--elevation-1);
  box-shadow: inset 0 0 10px 0 var(--elevation-1);
  border-left: solid 6px var(--elevation-1);
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background: var(--elevation-2);
  box-shadow: inset 0 0 10px 0 var(-elevation-1);
  border-left: solid 6px var(--elevation-1);
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background: var(--elevation-3);
}

.custom-scrollbar-horizontal::-webkit-scrollbar {
  width: 6px;
  height: 16px;
}

.custom-scrollbar-horizontal::-webkit-scrollbar-track {
  background: var(--elevation-1);
  border-radius: 8px;
}

.custom-scrollbar-horizontal::-webkit-scrollbar-thumb {
  background: var(--elevation-2);
  border-radius: 8px;
}

.custom-scrollbar-horizontal::-webkit-scrollbar-thumb:hover {
  background: var(--elevation-3);
}

